--- a/src/Backend/AdminBundle/Resources/config/routing/movimientoParte.yml
+++ b/src/Backend/AdminBundle/Resources/config/routing/movimientoParte.yml
@@ -33,6 +33,9 @@ movimientoParte_torechazado:
     pattern:  /{id}/torechazado
     defaults: { _controller: "BackendAdminBundle:MovimientoParte:toRechazado" }    
 
+movimientoParte_print:
+    pattern:  /{id}/print
+    defaults: { _controller: "BackendAdminBundle:MovimientoParte:print" }
     
 movimientoParte_toprocesadomovimiento:
     pattern:  /toprocesadomovimiento
@@ -42,11 +45,13 @@ movimientoParte_togeneratecombo:
     pattern:  /togeneratecombo
     defaults: { _controller: "BackendAdminBundle:MovimientoParte:toGenerateCombo" }    
 
+movimientoParte_toclosemovimiento:
+    pattern:  /toclosemovimiento
+    defaults: { _controller: "BackendAdminBundle:MovimientoParte:toCloseMovimiento" } 
 
-movimientoParte_toprocesadomovs:
-    pattern:  /toprocesadopartes
-    defaults: { _controller: "BackendAdminBundle:MovimientoParte:toProcesadoMovs" }    
-    
+movimientoParte_detail:
+    pattern:  /{id}/detail
+    defaults: { _controller: "BackendAdminBundle:MovimientoParte:detail" }    
 
 movimientoParte:
     pattern:  /{search}
